src/cimgui_ext/include/cimgui_ext.h

CIMGUI_API int igExtPlot(int plotType, const char* label, float (*values_getter)(void* data, int idx), int (*get_tooltip)(void* data, int idx, char* buffer), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, float size_x, float size_y);
//node editor

typedef void* axNodeId;
typedef void* axLinkId;
typedef void* axPinId;
typedef struct {
    float x;
    float y;
} axVec2;
CIMGUI_API void axSelectLink(axLinkId linkId, int append);
CIMGUI_API void axDeselectNode(axNodeId nodeId);
CIMGUI_API void axDeselectLink(axLinkId linkId);
CIMGUI_API int axDeleteNode(axNodeId nodeId);
CIMGUI_API int axDeleteLink(axLinkId linkId);
CIMGUI_API int axNodeHasAnyLinks(axNodeId nodeId); // Returns true if node has any link connected
CIMGUI_API int axPinHasAnyLinks(axPinId pinId); // Return true if pin has any link connected
CIMGUI_API int axNodeBreakLinks(axNodeId nodeId); // Break all links connected to this node
CIMGUI_API int axPinBreakLinks(axPinId pinId); // Break all links connected to this pin
CIMGUI_API void axNavigateToContent(float duration);
CIMGUI_API void axNavigateToSelection(int zoomIn, float duration);
CIMGUI_API int axShowNodeContextMenu(axNodeId* nodeId);
CIMGUI_API int axShowPinContextMenu(axPinId* pinId);
CIMGUI_API int axShowLinkContextMenu(axLinkId* linkId);
CIMGUI_API int axShowBackgroundContextMenu();
CIMGUI_API void axEnableShortcuts(int enable);
CIMGUI_API int axAreShortcutsEnabled();
CIMGUI_API int axBeginShortcut();
CIMGUI_API int axAcceptCut();
CIMGUI_API int axAcceptCopy();
CIMGUI_API int axAcceptPaste();
CIMGUI_API int axAcceptDuplicate();
CIMGUI_API int axAcceptCreateNode();
CIMGUI_API int axGetActionContextSize();
CIMGUI_API int axGetActionContextNodes(axNodeId* nodes, int size);
CIMGUI_API int axGetActionContextLinks(axLinkId* links, int size);
CIMGUI_API void axEndShortcut();
CIMGUI_API float axGetCurrentZoom();
CIMGUI_API axNodeId axGetHoveredNode();
CIMGUI_API axPinId axGetHoveredPin();
CIMGUI_API axLinkId axGetHoveredLink();
CIMGUI_API axNodeId axGetDoubleClickedNode();
CIMGUI_API axPinId axGetDoubleClickedPin();
CIMGUI_API axLinkId axGetDoubleClickedLink();
CIMGUI_API int axIsBackgroundClicked();
CIMGUI_API int axIsBackgroundDoubleClicked();
CIMGUI_API int axGetBackgroundClickButtonIndex(); // -1 if none
CIMGUI_API int axGetBackgroundDoubleClickButtonIndex(); // -1 if none
CIMGUI_API int axGetLinkPins(axLinkId linkId, axPinId* startPinId, axPinId* endPinId); // pass nullptr if particular pin do not interest you
CIMGUI_API int axPinHadAnyLinks(axPinId pinId);
CIMGUI_API void axGetScreenSize(axVec2* size);
CIMGUI_API void axScreenToCanvas(axVec2* pos, axVec2* canvas);
CIMGUI_API void axCanvasToScreen(axVec2* pos, axVec2* screen);
CIMGUI_API int axGetNodeCount();
CIMGUI_API int axGetOrderedNodeIds(axNodeId* nodes, int size);