src/Editor/LibreLancer.ImUI/NodeEditor/NodeEditorNative.cs


    [LibraryImport("cimgui")]
    public static partial void axSelectLink(axLinkId linkId, int append);

    [LibraryImport("cimgui")]
    public static partial void axDeselectNode(axNodeId nodeId);

    [LibraryImport("cimgui")]
    public static partial void axDeselectLink(axLinkId linkId);

    [LibraryImport("cimgui")]
    public static partial int axDeleteNode(axNodeId nodeId);

    [LibraryImport("cimgui")]
    public static partial int axDeleteLink(axLinkId linkId);

    [LibraryImport("cimgui")]
    public static partial int axNodeHasAnyLinks(axNodeId nodeId); // Returns true if node has any link connected

    [LibraryImport("cimgui")]
    public static partial int axPinHasAnyLinks(axPinId pinId); // Return true if pin has any link connected

    [LibraryImport("cimgui")]
    public static partial int axNodeBreakLinks(axNodeId nodeId); // Break all links connected to this node

    [LibraryImport("cimgui")]
    public static partial int axPinBreakLinks(axPinId pinId); // Break all links connected to this pin

    [LibraryImport("cimgui")]
    public static partial void axNavigateToContent(float duration);

    [LibraryImport("cimgui")]
    public static partial void axNavigateToSelection(int zoomIn, float duration);

    [LibraryImport("cimgui")]
    public static partial int axShowNodeContextMenu(axNodeId* nodeId);

    [LibraryImport("cimgui")]
    public static partial int axShowPinContextMenu(axPinId* pinId);

    [LibraryImport("cimgui")]
    public static partial int axShowLinkContextMenu(axLinkId* linkId);

    [LibraryImport("cimgui")]
    public static partial int axShowBackgroundContextMenu();

    [LibraryImport("cimgui")]
    public static partial void axEnableShortcuts(int enable);

    [LibraryImport("cimgui")]
    public static partial int axAreShortcutsEnabled();

    [LibraryImport("cimgui")]
    public static partial int axBeginShortcut();

    [LibraryImport("cimgui")]
    public static partial int axAcceptCut();

    [LibraryImport("cimgui")]
    public static partial int axAcceptCopy();

    [LibraryImport("cimgui")]
    public static partial int axAcceptPaste();

    [LibraryImport("cimgui")]
    public static partial int axAcceptDuplicate();

    [LibraryImport("cimgui")]
    public static partial int axAcceptCreateNode();

    [LibraryImport("cimgui")]
    public static partial int axGetActionContextSize();

    [LibraryImport("cimgui")]
    public static partial int axGetActionContextNodes(axNodeId* nodes, int size);

    [LibraryImport("cimgui")]
    public static partial int axGetActionContextLinks(axLinkId* links, int size);

    [LibraryImport("cimgui")]
    public static partial void axEndShortcut();

    [LibraryImport("cimgui")]
    public static partial float axGetCurrentZoom();

    [LibraryImport("cimgui")]
    public static partial axNodeId axGetHoveredNode();

    [LibraryImport("cimgui")]
    public static partial axPinId axGetHoveredPin();

    [LibraryImport("cimgui")]
    public static partial axLinkId axGetHoveredLink();

    [LibraryImport("cimgui")]
    public static partial axNodeId axGetDoubleClickedNode();

    [LibraryImport("cimgui")]
    public static partial axPinId axGetDoubleClickedPin();

    [LibraryImport("cimgui")]
    public static partial axLinkId axGetDoubleClickedLink();

    [LibraryImport("cimgui")]
    public static partial int axIsBackgroundClicked();

    [LibraryImport("cimgui")]
    public static partial int axIsBackgroundDoubleClicked();

    [LibraryImport("cimgui")]
    public static partial int axGetBackgroundClickButtonIndex(); // -1 if none

    [LibraryImport("cimgui")]
    public static partial int axGetBackgroundDoubleClickButtonIndex(); // -1 if none

    [LibraryImport("cimgui")]
    public static partial int
        axGetLinkPins(axLinkId linkId, axPinId* startPinId,
            axPinId* endPinId); // pass nullptr if particular pin do not interest you

    [LibraryImport("cimgui")]
    public static partial int axPinHadAnyLinks(axPinId pinId);

    [LibraryImport("cimgui")]
    public static partial void axGetScreenSize(Vector2* size);

    [LibraryImport("cimgui")]
    public static partial void axScreenToCanvas(Vector2* pos, Vector2* canvas);

    [LibraryImport("cimgui")]
    public static partial void axCanvasToScreen(Vector2* pos, Vector2* screen);

    [LibraryImport("cimgui")]
    public static partial int axGetNodeCount();

    [LibraryImport("cimgui")]
    public static partial int axGetOrderedNodeIds(axNodeId* nodes, int size);
}
